// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`suggestion dropdown does not show suggestion items that have already been picked 1`] = `
<li
  aria-selected="false"
  class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
  id="downshift-0-item-0"
  role="menuitem"
  style="padding: 0px; height: auto;"
  tabindex="-1"
>
  <p
    class="MuiTypography-root MuiTypography-body1"
    style="padding: 11px 16px;"
  >
    some suggestion
  </p>
  <span
    class="MuiTouchRipple-root"
  />
</li>
`;

exports[`suggestion dropdown shows a 'no suggestions found' message if the getSuggestions function returns an empty array 1`] = `
<h6
  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignCenter no-suggestions-message"
>
  No suggestions found for 
  <strong>
    some text
  </strong>
</h6>
`;

exports[`suggestion dropdown shows a 'type more characters' message if the getSuggestedItems() function returns the special symbol 1`] = `
<h6
  class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignCenter more-characters-message"
>
  Type more characters to see suggestions
</h6>
`;

exports[`suggestion dropdown shows a loading message if the suggestions are being loaded 1`] = `
<h6
  class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom MuiTypography-alignCenter"
>
  Loading suggestions for 
  <strong>
    some text
  </strong>
  …
</h6>
`;

exports[`suggestion dropdown shows an error message if the getSuggestions function returns a failed promise 1`] = `
<h6
  class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter DefaultError-root suggestion-error-message"
>
  An error occurred!
</h6>
`;

exports[`suggestion dropdown shows an error message if the getSuggestions function throws an error 1`] = `
<h6
  class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter DefaultError-root suggestion-error-message"
>
  An error occurred!
</h6>
`;
